--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
             <small>Quiz 09.13.16</small>
             Instructions
             </a>
-            a href="https://www.facebook.com/liftforlifeacademy" class="button">
+            <!--added left chevron-->
+            <a href="https://www.facebook.com/liftforlifeacademy" class="button">
             <small>LFLA</small>
             FACEBOOK
             </a>
